// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingCard matches snapshot 1`] = `
<a
  class="root listingCardRoot"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageWrapper"
  >
    <div
      class="root aspectRatioWrapper"
    >
      <div
        class="aspectPadding"
      >
        <div
          class="aspectBox"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="body"
  >
    <div
      class="title"
    >
      listing1 title
    </div>
    <p
      class="owner"
    >
      <span>
        ListingCard.ownerByline
      </span>
    </p>
    <div
      class="priceRow"
    >
      <div
        class="pricePrimaryWrap"
      >
        <div
          class="pricePrimary"
        >
          <div
            class="price"
            title="55"
          >
            <span>
              ListingCard.price
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot without price 1`] = `
<a
  class="root listingCardRoot"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageWrapper"
  >
    <div
      class="root aspectRatioWrapper"
    >
      <div
        class="aspectPadding"
      >
        <div
          class="aspectBox"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="body"
  >
    <div
      class="title"
    >
      listing1 title
    </div>
    <p
      class="owner"
    >
      <span>
        ListingCard.ownerByline
      </span>
    </p>
    <div
      class="priceRow"
    >
      <div
        class="pricePrimaryWrap"
      >
        <div
          class="pricePrimary"
        />
      </div>
    </div>
  </div>
</a>
`;
